further warning fixxes